[package]
name = "futures-x-io-timeoutable"
version = "0.2.0"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2018"
description = "Timeout ext for futures io and tokio io."
license = "Apache-2.0 OR MIT"
repository = "https://github.com/bk-rs/futures-x-io-timeoutable"
homepage = "https://github.com/bk-rs/futures-x-io-timeoutable"
documentation = "https://docs.rs/futures-x-io-timeoutable"
keywords = []
categories = ["asynchronous"]
readme = "README.md"

[features]
futures_io = ["futures-x-io/futures_io"]
tokio02_io = ["futures-x-io/tokio02_io"]
tokio_io = ["futures-x-io/tokio_io"]

[dependencies]
futures-timer = { version = "3.0", default-features = false, features = [] }

futures-x-io = { version = "0.2.2", default-features = false, features = [], optional = true }

[dev-dependencies]
futures-lite = { version = "1.11", default-features = false, features = [] }
async-io = { version = "1.3", default-features = false, features = [] }

tokio02 = { version = "~0.2", default-features = false, features = ["net", "stream"], package = "tokio" }
tokio = { version = "1.0", default-features = false, features = ["net", "rt-multi-thread"] }

[workspace]
members = [
    "demos/async-std",
    "demos/tokio",
]

[package.metadata.cargo-all-features]
skip_feature_sets = [
    ["futures_io", "tokio02_io"],
    ["futures_io", "tokio_io"],

    ["tokio02_io", "tokio_io"],
]
skip_optional_dependencies = true
