[package]
name = "futures-x-io-timeoutable-demo-tokio"
version = "0.1.0"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2018"

[dependencies]
futures-x-io-timeoutable = { path = "../..", version = "0.1", features = ["tokio_io"] }
tokio = { version = "1.0", default-features = false, features = ["macros", "rt-multi-thread"] }
